# prolog-interpreter

./: CMakeLists.txt  build  builtin-prolog.h  builtin.c++  interpreter.c++  interpreter.h  main.c++  parser.c++  parser.h  prelude.pl  prolog-interpreter.c++  test1  unification-priv.h  unification.c++  unification.h  unique-id.h
test/: .test4.swp  test1  test10  test11  test12  test13  test14  test15  test16  test17  test18  test19  test2  test20  test21  test22  test23  test24  test25  test26  test27  test28  test3  test4  test5  test6  test7  test8  test9
